--- a/public/register.html
+++ b/public/register.html
@@ -1,25 +1,28 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <title>Ticketmaster-VSD</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Register - Ticketmaster-VSD</title>
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
-
 <body>
   <div class="container">
     <div class="header">
       <h1>ticketmaster®</h1>
     </div>
     <div class="card">
+      <label for="firstName">First Name:</label>
+      <input type="text" id="firstName" placeholder="Enter your first name">
+      <label for="lastName">Last Name:</label>
+      <input type="text" id="lastName" placeholder="Enter your last name">
       <label for="email">Email:</label>
       <input type="email" id="email" placeholder="Enter your email">
       <label for="password">Password:</label>
       <input type="password" id="password" placeholder="Enter your password">
-      <button>Sign In</button>
-      <button id="registerBtn">Register</button>
+      <button id="registerUserBtn">Register</button>
     </div>
   </div>
   <script src="./index.js"></script>
 </body>
-
 </html>
